# ComfyUI-MLX-helpers

./: .gitignore  README.md  __init__.py  local_release_push.sh  pyproject.toml  requirements.txt
comfyui_mlx_helpers/: __init__.py  mlx_runtime.py  model_resolve.py  node_meta.py  nodes.py  output_tracing.py  v3_nodes.py  video_normalize.py  vlm_models.py
comfyui_mlx_helpers/web/: mlx_node_colors.js  mlx_partial_execution_targets.js  mlx_widget_input_sync.js  partial_execution_targets_core.js  widget_input_sync_core.js
tests/: test_mlx_runtime.py  test_model_resolve.py  test_node_meta.py  test_output_tracing.py  test_partial_execution_targets.js  test_v3_nodes.py  test_vlm_models.py  test_web_extensions.py  test_widget_input_sync.js
